--- a/Credit_Risk_Modeling.ipynb
+++ b/Credit_Risk_Modeling.ipynb
@@ -15142,27 +15142,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 244,
    "id": "40e5fae1-2013-4907-a047-e954e3500e72",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_new = pd.concat([df_full, df], axis=1)"
+    "df_new = pd.concat([df_full, df], axis=1)\n",
+    "df_new = df_new.loc[:,~df_new.columns.duplicated()].copy()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 245,
    "id": "93e77689-8981-48e9-8371-160a0a39c789",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(2260668, 721)"
+       "(2260668, 364)"
       ]
      },
-     "execution_count": 237,
+     "execution_count": 245,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -15173,7 +15174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 247,
    "id": "2789b3af-3df3-422f-b713-fc7f355b30ac",
    "metadata": {},
    "outputs": [
@@ -15191,7 +15192,7 @@
        "Name: EL, dtype: float64"
       ]
      },
-     "execution_count": 238,
+     "execution_count": 247,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -15203,7 +15204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 248,
    "id": "63b2adbf-effd-40dc-8868-acdc1ca5ec42",
    "metadata": {},
    "outputs": [
@@ -15229,7 +15230,6 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>funded_amnt</th>\n",
-       "      <th>funded_amnt</th>\n",
        "      <th>PD</th>\n",
        "      <th>LGD</th>\n",
        "      <th>EAD</th>\n",
@@ -15240,7 +15240,6 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>2500</td>\n",
-       "      <td>2500</td>\n",
        "      <td>0.14343</td>\n",
        "      <td>1.00000</td>\n",
        "      <td>1968.85858</td>\n",
@@ -15248,7 +15247,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>30000</td>\n",
        "      <td>30000</td>\n",
        "      <td>0.17343</td>\n",
        "      <td>1.00000</td>\n",
@@ -15258,7 +15256,6 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>5000</td>\n",
-       "      <td>5000</td>\n",
        "      <td>0.10793</td>\n",
        "      <td>1.00000</td>\n",
        "      <td>4043.70813</td>\n",
@@ -15267,7 +15264,6 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>4000</td>\n",
-       "      <td>4000</td>\n",
        "      <td>0.08987</td>\n",
        "      <td>1.00000</td>\n",
        "      <td>3208.33385</td>\n",
@@ -15275,7 +15271,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>30000</td>\n",
        "      <td>30000</td>\n",
        "      <td>0.09611</td>\n",
        "      <td>1.00000</td>\n",
@@ -15287,15 +15282,15 @@
        "</div>"
       ],
       "text/plain": [
-       "   funded_amnt  funded_amnt      PD     LGD         EAD         EL\n",
-       "0         2500         2500 0.14343 1.00000  1968.85858  282.39721\n",
-       "1        30000        30000 0.17343 1.00000 27294.79163 4733.77083\n",
-       "2         5000         5000 0.10793 1.00000  4043.70813  436.45194\n",
-       "3         4000         4000 0.08987 1.00000  3208.33385  288.31757\n",
-       "4        30000        30000 0.09611 1.00000 27653.07014 2657.79800"
+       "   funded_amnt      PD     LGD         EAD         EL\n",
+       "0         2500 0.14343 1.00000  1968.85858  282.39721\n",
+       "1        30000 0.17343 1.00000 27294.79163 4733.77083\n",
+       "2         5000 0.10793 1.00000  4043.70813  436.45194\n",
+       "3         4000 0.08987 1.00000  3208.33385  288.31757\n",
+       "4        30000 0.09611 1.00000 27653.07014 2657.79800"
       ]
      },
-     "execution_count": 239,
+     "execution_count": 248,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -15306,7 +15301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 249,
    "id": "fb94707a-b36a-4b44-b883-6f36a17f91e1",
    "metadata": {},
    "outputs": [
@@ -15316,7 +15311,7 @@
        "2946705470.6807604"
       ]
      },
-     "execution_count": 240,
+     "execution_count": 249,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -15328,7 +15323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 250,
    "id": "15aee441-979c-4f55-81cb-28fb66a46f0d",
    "metadata": {},
    "outputs": [
@@ -15338,19 +15333,19 @@
        "34004208600"
       ]
      },
-     "execution_count": 241,
+     "execution_count": 250,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Total Funded Amount for all loans\n",
-    "df_new['funded_amnt'].sum()[0]"
+    "df_new['funded_amnt'].sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 251,
    "id": "07717851-5783-40d2-8ccd-35cae3b428ae",
    "metadata": {},
    "outputs": [
@@ -15360,14 +15355,14 @@
        "0.08665708134377109"
       ]
      },
-     "execution_count": 242,
+     "execution_count": 251,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Total Expected Loss as a proportion of Total Funded Amount for all loans\n",
-    "df_new['EL'].sum() / df_new['funded_amnt'].sum()[0]"
+    "df_new['EL'].sum() / df_new['funded_amnt'].sum()"
    ]
   }
  ],
